@@ -1,3 +1,12 @@
+2009-11-02  Eric Carlson  <eric.carlson@apple.com>
+
+        Reviewed by John Sullivan and Mark Rowe.
+
+        <rdar://problem/7356733> Voiceover does not read correct media controller time values
+
+        * WebCoreLocalizedStrings.cpp:
+        (WebCore::localizedMediaTimeDescription):
+
 2009-10-29  Jon Honeycutt  <jhoneycutt@apple.com>
 
         MSAA: Accessibility of headings is not correct
